poco/test/neg/nlib05.poc
/* nlib05.poc - Test Err_poco_lib_empty: Library has no functions */
#pragma poco library "empty"

main()
{
	puts("This should never execute!");
}

